--- a/.drone.yml
+++ b/.drone.yml
@@ -7,3 +7,12 @@ steps:
   commands:
   - npm install
   - npm test
+  settings:
+    # registry: docker.io
+    repo: pavansa/my-app-new
+    username:
+      from_secret: docker_username
+    password:
+      from_secret: docker_password
+    tags: 
+      - pavans
